fixes color contrast on close button alerts

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -257,6 +257,7 @@ a {
 }
 
 .close-button {
+  color: $text;
   top: $line-height/2;
 }
 
